kubernetes/llama-stack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llamastack-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llamastack
  template:
    metadata:
      labels:
        app: llamastack
    spec:
      containers:
      - args:
        - --yaml-config
        - /app-config/config.yaml
        image: llamastack/distribution-remote-vllm:0.1.6 
        imagePullPolicy: Always
        name: llamastack
        ports:
        - containerPort: 8321
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app-config
          name: run-config-volume
        - mountPath: /.llama
          name: llama-temp
        - mountPath: /.cache
          name: cache
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: run-config
        name: run-config-volume
      - emptyDir: {}
        name: llama-temp
      - emptyDir: {}
        name: cache
